@@ -481,7 +481,6 @@ send_attrib(u_int32_t id, const Attrib *a)
 	buffer_free(&msg);
 }
 
-#ifdef USE_STATVFS
 static void
 send_statvfs(u_int32_t id, struct statvfs *st)
 {
@@ -508,7 +507,6 @@ send_statvfs(u_int32_t id, struct statvfs *st)
 	send_msg(&msg);
 	buffer_free(&msg);
 }
-#endif
 
 /* parse incoming */
 
@@ -525,14 +523,12 @@ process_init(void)
 	/* POSIX rename extension */
 	buffer_put_cstring(&msg, "posix-rename@openssh.com");
 	buffer_put_cstring(&msg, "1"); /* version */
-#ifdef USEE_STATVFS
 	/* statvfs extension */
 	buffer_put_cstring(&msg, "statvfs@openssh.com");
 	buffer_put_cstring(&msg, "2"); /* version */
 	/* fstatvfs extension */
 	buffer_put_cstring(&msg, "fstatvfs@openssh.com");
 	buffer_put_cstring(&msg, "2"); /* version */
-#endif
 	send_msg(&msg);
 	buffer_free(&msg);
 }
@@ -1142,7 +1138,6 @@ process_extended_posix_rename(u_int32_t id)
 	xfree(newpath);
 }
 
-#ifdef USE_STATVFS
 static void
 process_extended_statvfs(u_int32_t id)
 {
@@ -1178,7 +1173,6 @@ process_extended_fstatvfs(u_int32_t id)
 	else
 		send_statvfs(id, &st);
 }
-#endif
 
 static void
 process_extended(void)
@@ -1190,12 +1184,10 @@ process_extended(void)
 	request = get_string(NULL);
 	if (strcmp(request, "posix-rename@openssh.com") == 0)
 		process_extended_posix_rename(id);
-#ifdef USE_STATVFS
 	else if (strcmp(request, "statvfs@openssh.com") == 0)
 		process_extended_statvfs(id);
 	else if (strcmp(request, "fstatvfs@openssh.com") == 0)
 		process_extended_fstatvfs(id);
-#endif
 	else
 		send_status(id, SSH2_FX_OP_UNSUPPORTED);	/* MUST */
 	xfree(request);
