@@ -1,3 +1,9 @@
+20080608
+ - (dtucker) [configure.ac defines.h sftp-client.c sftp-server.c sftp.c
+   openbsd-compat/Makefile.in openbsd-compat/openbsd-compat.h
+   openbsd-compat/bsd-statvfs.{c,h}] Add a null implementation of statvfs and
+   fstatvfs and remove #defines around statvfs code.  ok djm@
+
 20080607
  - (dtucker) [mux.c] Include paths.h inside ifdef HAVE_PATHS_H.
  - (dtucker) [configure.ac defines.h sftp-client.c sftp-server.c sftp.c]
@@ -4054,4 +4060,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4942 2008/06/08 02:55:32 dtucker Exp $
+$Id: ChangeLog,v 1.4943 2008/06/08 17:32:29 dtucker Exp $
